ultimas implementaçoes requisitos 1 e 2 Adicionar arquivos de projeto.

--- a/academiaigor3/appsettings.json
+++ b/academiaigor3/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "academiaigor3Context": "Server=(localdb)\\mssqllocaldb;Database=academiaigor3Context-3c8cf54b-8053-4c3b-a741-a3db5f701218;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
